# checkup

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  RELEASE_READINESS.md  checkup.schema.json  checkup.yaml  justfile  main.py  mkdocs.yml  pyproject.toml
.claude/skills/adr/: SKILL.md
.claude/skills/checkup/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  ci.yml  docs.yml  release-finalize.yml  release-prepare.yml
docs/: index.md
docs/adr/: 2026.03.25-configuration-file-design.md  2026.03.25-credentials-and-secrets.md  2026.03.25-push-based-architecture.md  2026.04.02-metric-configuration-and-pickling.md  template.md
docs/api/: core.md
docs/concepts/: materializers.md  metrics.md  overview.md  providers.md
docs/getting-started/: installation.md  quickstart.md
docs/plans/: 2025-12-15-metrics-framework-design.md  2025-12-15-metrics-framework-implementation.md  2025-12-16-namespaced-providers-design.md  cli-design.md  plugin-ideas.md
docs/plugins/: conveyor.md  dbt.md  git.md  overview.md  python.md
images/: demo.tape
plans/: 2025-12-15-dbt-metrics-plugin-design.md  2025-12-15-multi-context-implementation.md  2025-12-16-instance-based-providers-design.md  2025-12-16-instance-based-providers-implementation.md
plugins/checkup-airflow/: README.md  pyproject.toml
plugins/checkup-airflow/src/checkup_airflow/: __init__.py  metrics.py  provider.py
plugins/checkup-bitbucket/: README.md  pyproject.toml
plugins/checkup-bitbucket/src/checkup_bitbucket/: __init__.py  metrics.py  provider.py
plugins/checkup-conveyor/: README.md  pyproject.toml
plugins/checkup-conveyor/src/checkup_conveyor/: __init__.py  api_client.py  conveyor_context.py  conveyor_metric.py  provider.py
plugins/checkup-conveyor/test/: test_conveyor_integration.py  test_integration.py
plugins/checkup-dbt/: README.md  pyproject.toml
plugins/checkup-dbt/src/checkup_dbt/: __init__.py  manifest_query.py  provider.py
plugins/checkup-dbt/src/checkup_dbt/metrics/: __init__.py  base.py
plugins/checkup-dbt/src/checkup_dbt/metrics/core/: __init__.py  columns.py  columns_description.py  columns_with_description.py  models.py  models_description.py  models_with_description.py  tests.py
plugins/checkup-dbt/src/checkup_dbt/metrics/output/: __init__.py  output_columns_without_data_type.py  output_models.py  output_models_description.py  output_models_with_description.py  output_models_without_contracts.py
plugins/checkup-dbt/src/checkup_dbt/metrics/quality/: __init__.py  flagged_packages.py  naming_convention.py  profile_host.py  supported_version.py  version.py
plugins/checkup-dbt/src/checkup_dbt/metrics/test/: __init__.py  column_test_coverage.py  column_tests.py  data_tests.py  tested_columns.py  unit_tests.py
plugins/checkup-dbt/tests/: conftest.py  test_all_metrics.py  test_core_metrics.py  test_output_metrics.py  test_provider.py  test_quality_metrics.py  test_test_metrics.py
plugins/checkup-dbt/tests/fixtures/sample_dbt_project/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
plugins/checkup-dbt/tests/fixtures/sample_dbt_project/models/marts/: customers.sql  schema.yml
plugins/checkup-dbt/tests/fixtures/sample_dbt_project/models/staging/: schema.yml  stg_customers.sql  stg_orders.sql
plugins/checkup-dbt/tests/fixtures/sample_dbt_project/tests/: assert_positive_amounts.sql
plugins/checkup-git/: README.md  pyproject.toml
plugins/checkup-git/src/checkup_git/: __init__.py  metrics.py  provider.py
plugins/checkup-git/tests/: conftest.py  test_git_metrics.py
plugins/checkup-github/: README.md  pyproject.toml
plugins/checkup-github/src/checkup_github/: __init__.py  metrics.py  provider.py
plugins/checkup-gitlab/: README.md  pyproject.toml
plugins/checkup-gitlab/src/checkup_gitlab/: __init__.py  metrics.py  provider.py
plugins/checkup-python/: README.md  pyproject.toml
plugins/checkup-python/src/checkup_python/: __init__.py  metric.py  provider.py
plugins/checkup-python/src/checkup_python/metrics/: __init__.py  linter.py  utils.py  version.py  version_check.py
plugins/checkup-python/tests/: test_metric.py  test_provider.py  test_python_hub.py  test_python_metric.py
plugins/checkup-python/tests/fixtures/: test_config.yaml
plugins/checkup-python/tests/fixtures/linter-test-project/: pyproject.toml
plugins/checkup-python/tests/fixtures/linter-test-project/src/: more_issues.py  problematic_code.py
plugins/checkup-python/tests/fixtures/non-uv-project/: __init__.py  setup.py
plugins/checkup-python/tests/fixtures/uv-project/: pyproject.toml
plugins/checkup-python/tests/fixtures/uv-project/src/: __init__.py
src/checkup/: __init__.py  config.py  discovery.py  errors.py  executor.py  graph.py  hub.py  materializers.py  measurement.py  metric.py  provider.py  selection.py  types.py  utils.py  validators.py
src/checkup/cli/: __init__.py  app.py  config_wizard.py  executor.py  loader.py  utils.py
src/checkup/cli/commands/: __init__.py  check.py  config.py  init.py  list_cmd.py  plugins.py  run.py  schema.py  validate.py  version.py
src/checkup/cli/config_wizard/: __init__.py  _common.py  create.py  edit.py
src/checkup/configuration/: __init__.py  env.py  io.py  models.py  schema.py
src/checkup/executor/: __init__.py  batch_executors.py  metric_calculator.py  provider_executor.py  state.py
src/checkup/materializers/: __init__.py  base.py  console.py  csv_file.py  database.py  html_report.py  markdown.py
src/checkup/providers/: __init__.py  tags.py
src/checkup/registry/: __init__.py  discovery.py
src/checkup/templates/: metrics_report.html
tests/: conftest.py  fixtures.py  test_cli_configuration.py  test_cli_plugins.py  test_config.py  test_executors.py  test_graph.py  test_hub.py  test_hub_execution.py  test_hub_validation.py  test_hub_with_providers.py  test_integration.py  test_materializers.py  test_metric.py  test_provider.py  test_providers.py  test_registry.py  test_selection.py  test_tag_provider.py
tests/fixtures/: test_config.yaml
