[project]
name = "checkup"
version = "0.2.10"
description = "Computational governance framework for measuring data product health"
readme = "README.md"
authors = [{ name = "Jan Vanbuel", email = "jan.vanbuel@ond.vlaanderen.be" }]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "pyyaml>=6.0",
    "rich>=13.0",
    "sqlalchemy>=2.0",
]

[project.scripts]
checkup = "checkup:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "plugins/checkup-git",
    "plugins/checkup-dbt",
    "plugins/checkup-python",
    "plugins/checkup-conveyor",
    "plugins/checkup-gitlab",
    "plugins/checkup-bitbucket",
    "plugins/checkup-github",
    "plugins/checkup-airflow",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-cov>=7.0.0", "ruff>=0.8.6", "prek>=0.3.0"]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "tests"]
norecursedirs = ["**/fixtures", "**/dbt_packages", ".*"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["checkup"]
