[project]
name = "checkup-airflow"
version = "0.1.1"
description = "Airflow metrics for checkup"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "checkup",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
checkup = { workspace = true }

[project.entry-points."checkup.providers"]
airflow = "checkup_airflow:AirflowProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/checkup_airflow"]
