[project]
name = "checkup-conveyor"
version = "0.1.0"
description = "Conveyor metrics for checkup"
requires-python = ">=3.12"
dependencies = [
    "checkup",
]

[tool.uv.sources]
checkup = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/checkup_python"]
