[project]
name = "checkup-conveyor"
version = "0.2.0"
description = "Conveyor metrics for checkup"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "checkup",
    "requests"
]

[tool.uv.sources]
checkup = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/checkup_conveyor"]
