[project]
name = "checkup-conveyor"
version = "0.4.0"
description = "Conveyor metrics for checkup"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "checkup",
    "requests"
]

[tool.uv.sources]
checkup = { workspace = true }

[project.entry-points."checkup.providers"]
conveyor = "checkup_conveyor:ConveyorProvider"

[project.entry-points."checkup.metrics"]
conveyor_last_deployment_time = "checkup_conveyor.conveyor_metric:ConveyorLastDeploymentTime"
conveyor_is_dirty_deployment = "checkup_conveyor.conveyor_metric:ConveyorIsDirtyDeployment"
conveyor_last_run_status = "checkup_conveyor.conveyor_metric:ConveyorLastRunStatus"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/checkup_conveyor"]
