[project]
name = "checkup-dbt"
version = "0.2.1"
description = "dbt metrics for checkup"
requires-python = ">=3.12"
dependencies = [
    "checkup",
    "dbt-core>=1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "dbt-duckdb>=1.9",
]

[tool.uv.sources]
checkup = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/checkup_dbt"]
