[project]
name = "checkup-git"
version = "0.4.1"
description = "Git metrics for checkup"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "checkup",
]

[project.urls]
Homepage = "https://github.com/datamindedbe/checkup"
Source = "https://github.com/datamindedbe/checkup"
Issues = "https://github.com/datamindedbe/checkup/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
checkup = { workspace = true }

[project.entry-points."checkup.providers"]
git = "checkup_git:GitProvider"

[project.entry-points."checkup.metrics"]
git_days_since_last_update = "checkup_git:GitDaysSinceLastUpdateMetric"
git_tracked_file_count = "checkup_git:GitTrackedFileCountMetric"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/checkup_git"]
