[project]
name = "checkup-github"
version = "0.3.0"
description = "GitHub metrics for checkup"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "checkup",
]

[project.urls]
Homepage = "https://github.com/datamindedbe/checkup"
Source = "https://github.com/datamindedbe/checkup"
Issues = "https://github.com/datamindedbe/checkup/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
checkup = { workspace = true }

[project.entry-points."checkup.providers"]
github = "checkup_github:GitHubProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/checkup_github"]
