[project]
name = "checkup-gitlab"
version = "0.1.0"
description = "GitLab metrics for checkup"
requires-python = ">=3.12"
dependencies = [
    "checkup",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
checkup = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/checkup_gitlab"]
