[project]
name = "checkup-python"
version = "0.2.0"
description = "Python metrics for checkup"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "checkup",
]

[tool.uv.sources]
checkup = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/checkup_python"]
