[project]
name = "checkup-python"
version = "0.4.0"
description = "Python metrics for checkup"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "checkup",
]

[tool.uv.sources]
checkup = { workspace = true }

[project.entry-points."checkup.metrics"]
python_version = "checkup_python.metrics:PythonVersionMetric"
python_version_check = "checkup_python.metrics:PythonVersionCheckMetric"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/checkup_python"]
